kubernetes/apps/clubroom/back.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clubroom-backend
  labels:
    app: clubroom-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clubroom-backend
  template:
    metadata:
      labels:
        app: clubroom-backend
    spec:
      containers:
        - name: app
          image: ghcr.io/piny940/clubroom-backend:1.0.14 # {"$imagepolicy": "default:clubroom-backend"}
          ports:
            - containerPort: 3000
