kubernetes/apps/clubroom/front.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clubroom-frontend
  labels:
    app: clubroom-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clubroom-frontend
  template:
    metadata:
      labels:
        app: clubroom-frontend
    spec:
      containers:
        - name: app
          image: ghcr.io/piny940/clubroom-frontend:1.0.5 # {"$imagepolicy": "default:clubroom-frontend"}
          ports:
            - containerPort: 4400
