kubernetes/apps/clubroom/front.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clubroom-frontend
spec:
  selector:
    app: clubroom-frontend
  ports:
    - name: http
      protocol: TCP
      port: 4400
      targetPort: 4400
  type: ClusterIP
